Refactored the plugin code to allow for re-use
o Refactored the helperClasses into individual classes. These will be
included into other container plugins that integrate with a Kubernetes
container platform.
o Refreshed the dependent jars for the plugin
o Updated the BasePlugin.groovy class with the latest version

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <plugin>
   <author>Electric Cloud</author>
-  <authorUrl></authorUrl>
+  <authorUrl>http://www.electric-cloud.com/support</authorUrl>
   <category>Container Management</category>
   <commander-version min="6.0" />
   <description>Integrates with Kubernetes orchestration engine to run docker containers. Kubernetes cluster can be hosted anywhere as long as the API is accessible.</description>
