--- a/lib/grapes/commons-beanutils/commons-beanutils/ivydata-1.8.0.properties
+++ b/lib/grapes/commons-beanutils/commons-beanutils/ivydata-1.8.0.properties
@@ -1,16 +1,16 @@
 #ivy cached data file for commons-beanutils#commons-beanutils;1.8.0
-#Mon Jan 16 16:21:25 IST 2017
-artifact\:ivy\#ivy.original\#xml\#581263767.exists=true
+#Fri Jan 20 20:44:34 PST 2017
+artifact\:commons-beanutils\#pom.original\#pom\#-482540107.exists=true
 artifact\:ivy\#ivy\#xml\#-853161592.exists=true
-artifact\:ivy\#ivy.original\#xml\#581263767.original=artifact\:ivy\#ivy.original\#xml\#581263767
-resolver=cachedGrapes
-artifact\:commons-beanutils\#jar\#jar\#-2135102769.location=/Users/vishalb/.groovy/grapes/commons-beanutils/commons-beanutils/jars/commons-beanutils-1.8.0.jar
+artifact\:commons-beanutils\#pom.original\#pom\#-482540107.location=https\://repo1.maven.org/maven2/commons-beanutils/commons-beanutils/1.8.0/commons-beanutils-1.8.0.pom
+resolver=maven
+artifact\:commons-beanutils\#jar\#jar\#-2135102769.location=https\://repo1.maven.org/maven2/commons-beanutils/commons-beanutils/1.8.0/commons-beanutils-1.8.0.jar
+artifact\:commons-beanutils\#pom.original\#pom\#-482540107.is-local=false
 artifact\:commons-beanutils\#jar\#jar\#-2135102769.exists=true
-artifact\:ivy\#ivy\#xml\#-853161592.location=/Users/vishalb/.groovy/grapes/commons-beanutils/commons-beanutils/ivy-1.8.0.xml
-artifact\:commons-beanutils\#jar\#jar\#-2135102769.is-local=true
-artifact.resolver=cachedGrapes
-artifact\:ivy\#ivy.original\#xml\#581263767.location=/Users/vishalb/.groovy/grapes/commons-beanutils/commons-beanutils/ivy-1.8.0.xml
+artifact\:ivy\#ivy\#xml\#-853161592.location=https\://repo1.maven.org/maven2/commons-beanutils/commons-beanutils/1.8.0/commons-beanutils-1.8.0.pom
+artifact\:commons-beanutils\#jar\#jar\#-2135102769.is-local=false
+artifact\:commons-beanutils\#pom.original\#pom\#-482540107.original=artifact\:commons-beanutils\#pom.original\#pom\#-482540107
+artifact.resolver=maven
 artifact\:commons-beanutils\#jar\#jar\#-2135102769.original=artifact\:commons-beanutils\#jar\#jar\#-2135102769
-artifact\:ivy\#ivy\#xml\#-853161592.is-local=true
-artifact\:ivy\#ivy.original\#xml\#581263767.is-local=true
-artifact\:ivy\#ivy\#xml\#-853161592.original=artifact\:ivy\#ivy.original\#xml\#581263767
+artifact\:ivy\#ivy\#xml\#-853161592.is-local=false
+artifact\:ivy\#ivy\#xml\#-853161592.original=artifact\:commons-beanutils\#pom.original\#pom\#-482540107
