--- a/lib/grapes/commons-codec/commons-codec/ivydata-1.6.properties
+++ b/lib/grapes/commons-codec/commons-codec/ivydata-1.6.properties
@@ -1,16 +1,16 @@
 #ivy cached data file for commons-codec#commons-codec;1.6
-#Mon Jan 16 16:21:25 IST 2017
-artifact\:ivy\#ivy.original\#xml\#1077433215.exists=true
-artifact\:ivy\#ivy\#xml\#-356992144.is-local=true
-resolver=cachedGrapes
-artifact\:ivy\#ivy\#xml\#-356992144.location=/Users/vishalb/.groovy/grapes/commons-codec/commons-codec/ivy-1.6.xml
-artifact\:ivy\#ivy.original\#xml\#1077433215.location=/Users/vishalb/.groovy/grapes/commons-codec/commons-codec/ivy-1.6.xml
-artifact\:ivy\#ivy\#xml\#-356992144.original=artifact\:ivy\#ivy.original\#xml\#1077433215
-artifact\:ivy\#ivy.original\#xml\#1077433215.is-local=true
-artifact\:commons-codec\#jar\#jar\#1024660356.is-local=true
-artifact\:commons-codec\#jar\#jar\#1024660356.location=/Users/vishalb/.groovy/grapes/commons-codec/commons-codec/jars/commons-codec-1.6.jar
+#Fri Jan 20 20:44:34 PST 2017
+artifact\:commons-codec\#pom.original\#pom\#-1617744278.location=https\://repo1.maven.org/maven2/commons-codec/commons-codec/1.6/commons-codec-1.6.pom
+artifact\:ivy\#ivy\#xml\#-356992144.is-local=false
+resolver=maven
+artifact\:ivy\#ivy\#xml\#-356992144.location=https\://repo1.maven.org/maven2/commons-codec/commons-codec/1.6/commons-codec-1.6.pom
+artifact\:commons-codec\#pom.original\#pom\#-1617744278.is-local=false
+artifact\:commons-codec\#pom.original\#pom\#-1617744278.exists=true
+artifact\:ivy\#ivy\#xml\#-356992144.original=artifact\:commons-codec\#pom.original\#pom\#-1617744278
+artifact\:commons-codec\#pom.original\#pom\#-1617744278.original=artifact\:commons-codec\#pom.original\#pom\#-1617744278
+artifact\:commons-codec\#jar\#jar\#1024660356.is-local=false
+artifact\:commons-codec\#jar\#jar\#1024660356.location=https\://repo1.maven.org/maven2/commons-codec/commons-codec/1.6/commons-codec-1.6.jar
 artifact\:ivy\#ivy\#xml\#-356992144.exists=true
-artifact.resolver=cachedGrapes
-artifact\:ivy\#ivy.original\#xml\#1077433215.original=artifact\:ivy\#ivy.original\#xml\#1077433215
+artifact.resolver=maven
 artifact\:commons-codec\#jar\#jar\#1024660356.original=artifact\:commons-codec\#jar\#jar\#1024660356
 artifact\:commons-codec\#jar\#jar\#1024660356.exists=true
