--- a/lib/grapes/commons-collections/commons-collections/ivydata-3.2.1.properties
+++ b/lib/grapes/commons-collections/commons-collections/ivydata-3.2.1.properties
@@ -1,16 +1,16 @@
 #ivy cached data file for commons-collections#commons-collections;3.2.1
-#Mon Jan 16 16:21:25 IST 2017
+#Fri Jan 20 20:44:34 PST 2017
 artifact\:commons-collections\#jar\#jar\#420622636.exists=true
-artifact\:ivy\#ivy.original\#xml\#-381918400.location=/Users/vishalb/.groovy/grapes/commons-collections/commons-collections/ivy-3.2.1.xml
 artifact\:commons-collections\#jar\#jar\#420622636.original=artifact\:commons-collections\#jar\#jar\#420622636
-resolver=cachedGrapes
-artifact\:ivy\#ivy.original\#xml\#-381918400.is-local=true
-artifact\:ivy\#ivy.original\#xml\#-381918400.exists=true
-artifact\:ivy\#ivy.original\#xml\#-381918400.original=artifact\:ivy\#ivy.original\#xml\#-381918400
-artifact\:ivy\#ivy\#xml\#-1816343759.is-local=true
-artifact\:ivy\#ivy\#xml\#-1816343759.location=/Users/vishalb/.groovy/grapes/commons-collections/commons-collections/ivy-3.2.1.xml
-artifact\:ivy\#ivy\#xml\#-1816343759.original=artifact\:ivy\#ivy.original\#xml\#-381918400
-artifact\:commons-collections\#jar\#jar\#420622636.location=/Users/vishalb/.groovy/grapes/commons-collections/commons-collections/jars/commons-collections-3.2.1.jar
-artifact.resolver=cachedGrapes
-artifact\:commons-collections\#jar\#jar\#420622636.is-local=true
+resolver=maven
+artifact\:commons-collections\#pom.original\#pom\#2073185298.original=artifact\:commons-collections\#pom.original\#pom\#2073185298
+artifact\:ivy\#ivy\#xml\#-1816343759.is-local=false
+artifact\:ivy\#ivy\#xml\#-1816343759.location=https\://repo1.maven.org/maven2/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1.pom
+artifact\:ivy\#ivy\#xml\#-1816343759.original=artifact\:commons-collections\#pom.original\#pom\#2073185298
+artifact\:commons-collections\#jar\#jar\#420622636.location=https\://repo1.maven.org/maven2/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1.jar
+artifact.resolver=maven
+artifact\:commons-collections\#pom.original\#pom\#2073185298.exists=true
+artifact\:commons-collections\#jar\#jar\#420622636.is-local=false
 artifact\:ivy\#ivy\#xml\#-1816343759.exists=true
+artifact\:commons-collections\#pom.original\#pom\#2073185298.is-local=false
+artifact\:commons-collections\#pom.original\#pom\#2073185298.location=https\://repo1.maven.org/maven2/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1.pom
