--- a/lib/grapes/commons-lang/commons-lang/ivydata-2.4.properties
+++ b/lib/grapes/commons-lang/commons-lang/ivydata-2.4.properties
@@ -1,16 +1,16 @@
 #ivy cached data file for commons-lang#commons-lang;2.4
-#Mon Jan 16 16:21:25 IST 2017
-artifact\:ivy\#ivy\#xml\#1530228507.original=artifact\:ivy\#ivy.original\#xml\#-1330313430
-resolver=cachedGrapes
+#Fri Jan 20 20:44:34 PST 2017
+artifact\:ivy\#ivy\#xml\#1530228507.original=artifact\:commons-lang\#pom.original\#pom\#-2103761529
+artifact\:commons-lang\#pom.original\#pom\#-2103761529.is-local=false
+resolver=maven
 artifact\:commons-lang\#jar\#jar\#538643105.exists=true
-artifact\:ivy\#ivy.original\#xml\#-1330313430.is-local=true
-artifact\:ivy\#ivy.original\#xml\#-1330313430.location=/Users/vishalb/.groovy/grapes/commons-lang/commons-lang/ivy-2.4.xml
-artifact\:commons-lang\#jar\#jar\#538643105.is-local=true
-artifact\:commons-lang\#jar\#jar\#538643105.location=/Users/vishalb/.groovy/grapes/commons-lang/commons-lang/jars/commons-lang-2.4.jar
-artifact\:ivy\#ivy\#xml\#1530228507.location=/Users/vishalb/.groovy/grapes/commons-lang/commons-lang/ivy-2.4.xml
-artifact.resolver=cachedGrapes
-artifact\:ivy\#ivy.original\#xml\#-1330313430.exists=true
+artifact\:commons-lang\#pom.original\#pom\#-2103761529.original=artifact\:commons-lang\#pom.original\#pom\#-2103761529
+artifact\:commons-lang\#jar\#jar\#538643105.is-local=false
+artifact\:commons-lang\#jar\#jar\#538643105.location=https\://repo1.maven.org/maven2/commons-lang/commons-lang/2.4/commons-lang-2.4.jar
+artifact\:ivy\#ivy\#xml\#1530228507.location=https\://repo1.maven.org/maven2/commons-lang/commons-lang/2.4/commons-lang-2.4.pom
+artifact.resolver=maven
+artifact\:commons-lang\#pom.original\#pom\#-2103761529.exists=true
 artifact\:ivy\#ivy\#xml\#1530228507.exists=true
-artifact\:ivy\#ivy.original\#xml\#-1330313430.original=artifact\:ivy\#ivy.original\#xml\#-1330313430
-artifact\:ivy\#ivy\#xml\#1530228507.is-local=true
+artifact\:ivy\#ivy\#xml\#1530228507.is-local=false
+artifact\:commons-lang\#pom.original\#pom\#-2103761529.location=https\://repo1.maven.org/maven2/commons-lang/commons-lang/2.4/commons-lang-2.4.pom
 artifact\:commons-lang\#jar\#jar\#538643105.original=artifact\:commons-lang\#jar\#jar\#538643105
