--- a/lib/grapes/commons-logging/commons-logging/ivydata-1.1.1.properties
+++ b/lib/grapes/commons-logging/commons-logging/ivydata-1.1.1.properties
@@ -1,16 +1,16 @@
 #ivy cached data file for commons-logging#commons-logging;1.1.1
-#Mon Jan 16 16:21:25 IST 2017
-artifact\:ivy\#ivy.original\#xml\#1505108209.exists=true
+#Fri Jan 20 20:44:34 PST 2017
+artifact\:commons-logging\#pom.original\#pom\#1627457661.exists=true
+artifact\:commons-logging\#pom.original\#pom\#1627457661.original=artifact\:commons-logging\#pom.original\#pom\#1627457661
 artifact\:ivy\#ivy\#xml\#70682850.exists=true
-artifact\:ivy\#ivy\#xml\#70682850.is-local=true
-artifact\:ivy\#ivy.original\#xml\#1505108209.is-local=true
-artifact\:ivy\#ivy\#xml\#70682850.location=/Users/vishalb/.groovy/grapes/commons-logging/commons-logging/ivy-1.1.1.xml
-resolver=cachedGrapes
-artifact\:commons-logging\#jar\#jar\#-25105001.is-local=true
-artifact\:commons-logging\#jar\#jar\#-25105001.location=/Users/vishalb/.groovy/grapes/commons-logging/commons-logging/jars/commons-logging-1.1.1.jar
-artifact\:ivy\#ivy\#xml\#70682850.original=artifact\:ivy\#ivy.original\#xml\#1505108209
-artifact\:ivy\#ivy.original\#xml\#1505108209.original=artifact\:ivy\#ivy.original\#xml\#1505108209
+artifact\:ivy\#ivy\#xml\#70682850.is-local=false
+artifact\:ivy\#ivy\#xml\#70682850.location=https\://repo1.maven.org/maven2/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.pom
+resolver=maven
+artifact\:commons-logging\#jar\#jar\#-25105001.is-local=false
+artifact\:commons-logging\#jar\#jar\#-25105001.location=https\://repo1.maven.org/maven2/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar
+artifact\:ivy\#ivy\#xml\#70682850.original=artifact\:commons-logging\#pom.original\#pom\#1627457661
 artifact\:commons-logging\#jar\#jar\#-25105001.original=artifact\:commons-logging\#jar\#jar\#-25105001
-artifact.resolver=cachedGrapes
+artifact\:commons-logging\#pom.original\#pom\#1627457661.location=https\://repo1.maven.org/maven2/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.pom
+artifact.resolver=maven
+artifact\:commons-logging\#pom.original\#pom\#1627457661.is-local=false
 artifact\:commons-logging\#jar\#jar\#-25105001.exists=true
-artifact\:ivy\#ivy.original\#xml\#1505108209.location=/Users/vishalb/.groovy/grapes/commons-logging/commons-logging/ivy-1.1.1.xml
