--- a/lib/grapes/net.sf.ezmorph/ezmorph/ivydata-1.0.6.properties
+++ b/lib/grapes/net.sf.ezmorph/ezmorph/ivydata-1.0.6.properties
@@ -1,16 +1,16 @@
 #ivy cached data file for net.sf.ezmorph#ezmorph;1.0.6
-#Mon Jan 16 16:21:25 IST 2017
+#Fri Jan 20 20:44:34 PST 2017
 artifact\:ezmorph\#jar\#jar\#-623766732.original=artifact\:ezmorph\#jar\#jar\#-623766732
-resolver=cachedGrapes
-artifact\:ivy\#ivy\#xml\#-963389202.original=artifact\:ivy\#ivy.original\#xml\#471036157
-artifact\:ivy\#ivy.original\#xml\#471036157.is-local=true
-artifact\:ivy\#ivy.original\#xml\#471036157.location=/Users/vishalb/.groovy/grapes/net.sf.ezmorph/ezmorph/ivy-1.0.6.xml
-artifact\:ivy\#ivy.original\#xml\#471036157.exists=true
-artifact\:ivy\#ivy.original\#xml\#471036157.original=artifact\:ivy\#ivy.original\#xml\#471036157
-artifact\:ezmorph\#jar\#jar\#-623766732.location=/Users/vishalb/.groovy/grapes/net.sf.ezmorph/ezmorph/jars/ezmorph-1.0.6.jar
-artifact.resolver=cachedGrapes
+artifact\:ezmorph\#pom.original\#pom\#1028795930.original=artifact\:ezmorph\#pom.original\#pom\#1028795930
+resolver=maven
+artifact\:ivy\#ivy\#xml\#-963389202.original=artifact\:ezmorph\#pom.original\#pom\#1028795930
+artifact\:ezmorph\#pom.original\#pom\#1028795930.exists=true
+artifact\:ezmorph\#pom.original\#pom\#1028795930.is-local=false
+artifact\:ezmorph\#jar\#jar\#-623766732.location=https\://repo1.maven.org/maven2/net/sf/ezmorph/ezmorph/1.0.6/ezmorph-1.0.6.jar
+artifact\:ezmorph\#pom.original\#pom\#1028795930.location=https\://repo1.maven.org/maven2/net/sf/ezmorph/ezmorph/1.0.6/ezmorph-1.0.6.pom
+artifact.resolver=maven
 artifact\:ivy\#ivy\#xml\#-963389202.exists=true
-artifact\:ezmorph\#jar\#jar\#-623766732.is-local=true
+artifact\:ezmorph\#jar\#jar\#-623766732.is-local=false
 artifact\:ezmorph\#jar\#jar\#-623766732.exists=true
-artifact\:ivy\#ivy\#xml\#-963389202.is-local=true
-artifact\:ivy\#ivy\#xml\#-963389202.location=/Users/vishalb/.groovy/grapes/net.sf.ezmorph/ezmorph/ivy-1.0.6.xml
+artifact\:ivy\#ivy\#xml\#-963389202.is-local=false
+artifact\:ivy\#ivy\#xml\#-963389202.location=https\://repo1.maven.org/maven2/net/sf/ezmorph/ezmorph/1.0.6/ezmorph-1.0.6.pom
