--- a/lib/grapes/net.sf.json-lib/json-lib/ivydata-2.3.properties
+++ b/lib/grapes/net.sf.json-lib/json-lib/ivydata-2.3.properties
@@ -1,16 +1,16 @@
 #ivy cached data file for net.sf.json-lib#json-lib;2.3
-#Mon Jan 16 16:21:25 IST 2017
-artifact\:ivy\#ivy.original\#xml\#328546477.location=/Users/vishalb/.groovy/grapes/net.sf.json-lib/json-lib/ivy-2.3.xml
+#Fri Jan 20 20:44:34 PST 2017
+artifact\:json-lib\#pom.original\#pom\#970769647.original=artifact\:json-lib\#pom.original\#pom\#970769647
 artifact\:ivy\#ivy\#xml\#-1105878882.exists=true
-resolver=cachedGrapes
-artifact\:ivy\#ivy.original\#xml\#328546477.is-local=true
-artifact\:ivy\#ivy\#xml\#-1105878882.is-local=true
-artifact\:ivy\#ivy\#xml\#-1105878882.location=/Users/vishalb/.groovy/grapes/net.sf.json-lib/json-lib/ivy-2.3.xml
+resolver=maven
+artifact\:ivy\#ivy\#xml\#-1105878882.is-local=false
+artifact\:ivy\#ivy\#xml\#-1105878882.location=https\://repo1.maven.org/maven2/net/sf/json-lib/json-lib/2.3/json-lib-2.3.pom
 artifact\:json-lib\#jar\#jar\#-1561918224.exists=true
-artifact\:ivy\#ivy.original\#xml\#328546477.original=artifact\:ivy\#ivy.original\#xml\#328546477
-artifact\:json-lib\#jar\#jar\#-1561918224.location=/Users/vishalb/.groovy/grapes/net.sf.json-lib/json-lib/jars/json-lib-2.3-jdk15.jar
-artifact.resolver=cachedGrapes
-artifact\:ivy\#ivy\#xml\#-1105878882.original=artifact\:ivy\#ivy.original\#xml\#328546477
-artifact\:ivy\#ivy.original\#xml\#328546477.exists=true
-artifact\:json-lib\#jar\#jar\#-1561918224.is-local=true
+artifact\:json-lib\#pom.original\#pom\#970769647.exists=true
+artifact\:json-lib\#jar\#jar\#-1561918224.location=https\://repo1.maven.org/maven2/net/sf/json-lib/json-lib/2.3/json-lib-2.3-jdk15.jar
+artifact\:json-lib\#pom.original\#pom\#970769647.is-local=false
+artifact\:json-lib\#pom.original\#pom\#970769647.location=https\://repo1.maven.org/maven2/net/sf/json-lib/json-lib/2.3/json-lib-2.3.pom
+artifact.resolver=maven
+artifact\:ivy\#ivy\#xml\#-1105878882.original=artifact\:json-lib\#pom.original\#pom\#970769647
+artifact\:json-lib\#jar\#jar\#-1561918224.is-local=false
 artifact\:json-lib\#jar\#jar\#-1561918224.original=artifact\:json-lib\#jar\#jar\#-1561918224
