--- a/lib/grapes/org.apache.httpcomponents/httpclient/ivydata-4.2.1.properties
+++ b/lib/grapes/org.apache.httpcomponents/httpclient/ivydata-4.2.1.properties
@@ -1,16 +1,16 @@
 #ivy cached data file for org.apache.httpcomponents#httpclient;4.2.1
-#Mon Jan 16 16:21:25 IST 2017
-artifact\:ivy\#ivy\#xml\#1855356628.is-local=true
-artifact\:ivy\#ivy.original\#xml\#-1005185309.is-local=true
-artifact\:ivy\#ivy\#xml\#1855356628.location=/Users/vishalb/.groovy/grapes/org.apache.httpcomponents/httpclient/ivy-4.2.1.xml
+#Fri Jan 20 20:44:34 PST 2017
+artifact\:ivy\#ivy\#xml\#1855356628.is-local=false
+artifact\:ivy\#ivy\#xml\#1855356628.location=https\://repo1.maven.org/maven2/org/apache/httpcomponents/httpclient/4.2.1/httpclient-4.2.1.pom
+artifact\:httpclient\#pom.original\#pom\#-365958688.is-local=false
 artifact\:httpclient\#jar\#jar\#-2018521350.exists=true
-artifact\:ivy\#ivy\#xml\#1855356628.original=artifact\:ivy\#ivy.original\#xml\#-1005185309
-artifact\:ivy\#ivy.original\#xml\#-1005185309.original=artifact\:ivy\#ivy.original\#xml\#-1005185309
-resolver=cachedGrapes
-artifact\:ivy\#ivy.original\#xml\#-1005185309.exists=true
-artifact\:httpclient\#jar\#jar\#-2018521350.location=/Users/vishalb/.groovy/grapes/org.apache.httpcomponents/httpclient/jars/httpclient-4.2.1.jar
-artifact.resolver=cachedGrapes
-artifact\:httpclient\#jar\#jar\#-2018521350.is-local=true
-artifact\:ivy\#ivy.original\#xml\#-1005185309.location=/Users/vishalb/.groovy/grapes/org.apache.httpcomponents/httpclient/ivy-4.2.1.xml
+artifact\:httpclient\#pom.original\#pom\#-365958688.location=https\://repo1.maven.org/maven2/org/apache/httpcomponents/httpclient/4.2.1/httpclient-4.2.1.pom
+artifact\:ivy\#ivy\#xml\#1855356628.original=artifact\:httpclient\#pom.original\#pom\#-365958688
+resolver=maven
+artifact\:httpclient\#pom.original\#pom\#-365958688.original=artifact\:httpclient\#pom.original\#pom\#-365958688
+artifact\:httpclient\#pom.original\#pom\#-365958688.exists=true
+artifact\:httpclient\#jar\#jar\#-2018521350.location=https\://repo1.maven.org/maven2/org/apache/httpcomponents/httpclient/4.2.1/httpclient-4.2.1.jar
+artifact.resolver=maven
+artifact\:httpclient\#jar\#jar\#-2018521350.is-local=false
 artifact\:httpclient\#jar\#jar\#-2018521350.original=artifact\:httpclient\#jar\#jar\#-2018521350
 artifact\:ivy\#ivy\#xml\#1855356628.exists=true
