--- a/lib/grapes/xerces/xercesImpl/ivydata-2.9.1.properties
+++ b/lib/grapes/xerces/xercesImpl/ivydata-2.9.1.properties
@@ -1,16 +1,16 @@
 #ivy cached data file for xerces#xercesImpl;2.9.1
-#Mon Jan 16 16:21:25 IST 2017
-artifact\:ivy\#ivy.original\#xml\#573769182.exists=true
-artifact\:xercesImpl\#jar\#jar\#-420565626.is-local=true
-resolver=cachedGrapes
-artifact\:ivy\#ivy.original\#xml\#573769182.location=/Users/vishalb/.groovy/grapes/xerces/xercesImpl/ivy-2.9.1.xml
+#Fri Jan 20 20:44:34 PST 2017
+artifact\:xercesImpl\#jar\#jar\#-420565626.is-local=false
+resolver=maven
 artifact\:xercesImpl\#jar\#jar\#-420565626.original=artifact\:xercesImpl\#jar\#jar\#-420565626
-artifact\:ivy\#ivy\#xml\#-860656177.original=artifact\:ivy\#ivy.original\#xml\#573769182
-artifact\:ivy\#ivy.original\#xml\#573769182.is-local=true
+artifact\:ivy\#ivy\#xml\#-860656177.original=artifact\:xercesImpl\#pom.original\#pom\#1231997036
 artifact\:xercesImpl\#jar\#jar\#-420565626.exists=true
-artifact\:ivy\#ivy.original\#xml\#573769182.original=artifact\:ivy\#ivy.original\#xml\#573769182
-artifact.resolver=cachedGrapes
+artifact\:xercesImpl\#pom.original\#pom\#1231997036.is-local=false
+artifact\:xercesImpl\#pom.original\#pom\#1231997036.location=https\://repo1.maven.org/maven2/xerces/xercesImpl/2.9.1/xercesImpl-2.9.1.pom
+artifact.resolver=maven
 artifact\:ivy\#ivy\#xml\#-860656177.exists=true
-artifact\:ivy\#ivy\#xml\#-860656177.is-local=true
-artifact\:ivy\#ivy\#xml\#-860656177.location=/Users/vishalb/.groovy/grapes/xerces/xercesImpl/ivy-2.9.1.xml
-artifact\:xercesImpl\#jar\#jar\#-420565626.location=/Users/vishalb/.groovy/grapes/xerces/xercesImpl/jars/xercesImpl-2.9.1.jar
+artifact\:xercesImpl\#pom.original\#pom\#1231997036.exists=true
+artifact\:ivy\#ivy\#xml\#-860656177.is-local=false
+artifact\:ivy\#ivy\#xml\#-860656177.location=https\://repo1.maven.org/maven2/xerces/xercesImpl/2.9.1/xercesImpl-2.9.1.pom
+artifact\:xercesImpl\#jar\#jar\#-420565626.location=https\://repo1.maven.org/maven2/xerces/xercesImpl/2.9.1/xercesImpl-2.9.1.jar
+artifact\:xercesImpl\#pom.original\#pom\#1231997036.original=artifact\:xercesImpl\#pom.original\#pom\#1231997036
