--- a/lib/grapes/xml-apis/xml-apis/ivydata-1.3.04.properties
+++ b/lib/grapes/xml-apis/xml-apis/ivydata-1.3.04.properties
@@ -1,16 +1,16 @@
 #ivy cached data file for xml-apis#xml-apis;1.3.04
-#Mon Jan 16 16:21:25 IST 2017
-artifact\:ivy\#ivy\#xml\#-1121175713.is-local=true
-artifact\:ivy\#ivy.original\#xml\#313249646.is-local=true
-artifact\:ivy\#ivy.original\#xml\#313249646.location=/Users/vishalb/.groovy/grapes/xml-apis/xml-apis/ivy-1.3.04.xml
-artifact\:xml-apis\#jar\#jar\#-1415500959.is-local=true
-artifact\:ivy\#ivy\#xml\#-1121175713.original=artifact\:ivy\#ivy.original\#xml\#313249646
-resolver=cachedGrapes
+#Fri Jan 20 20:44:34 PST 2017
+artifact\:ivy\#ivy\#xml\#-1121175713.is-local=false
+artifact\:xml-apis\#pom.original\#pom\#237061703.is-local=false
+artifact\:xml-apis\#jar\#jar\#-1415500959.is-local=false
+artifact\:ivy\#ivy\#xml\#-1121175713.original=artifact\:xml-apis\#pom.original\#pom\#237061703
+resolver=maven
+artifact\:xml-apis\#pom.original\#pom\#237061703.original=artifact\:xml-apis\#pom.original\#pom\#237061703
 artifact\:xml-apis\#jar\#jar\#-1415500959.original=artifact\:xml-apis\#jar\#jar\#-1415500959
-artifact\:ivy\#ivy.original\#xml\#313249646.exists=true
 artifact\:xml-apis\#jar\#jar\#-1415500959.exists=true
-artifact\:ivy\#ivy.original\#xml\#313249646.original=artifact\:ivy\#ivy.original\#xml\#313249646
-artifact.resolver=cachedGrapes
-artifact\:ivy\#ivy\#xml\#-1121175713.location=/Users/vishalb/.groovy/grapes/xml-apis/xml-apis/ivy-1.3.04.xml
+artifact\:xml-apis\#pom.original\#pom\#237061703.exists=true
+artifact.resolver=maven
+artifact\:ivy\#ivy\#xml\#-1121175713.location=https\://repo1.maven.org/maven2/xml-apis/xml-apis/1.3.04/xml-apis-1.3.04.pom
 artifact\:ivy\#ivy\#xml\#-1121175713.exists=true
-artifact\:xml-apis\#jar\#jar\#-1415500959.location=/Users/vishalb/.groovy/grapes/xml-apis/xml-apis/jars/xml-apis-1.3.04.jar
+artifact\:xml-apis\#pom.original\#pom\#237061703.location=https\://repo1.maven.org/maven2/xml-apis/xml-apis/1.3.04/xml-apis-1.3.04.pom
+artifact\:xml-apis\#jar\#jar\#-1415500959.location=https\://repo1.maven.org/maven2/xml-apis/xml-apis/1.3.04/xml-apis-1.3.04.jar
