--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -3,7 +3,7 @@
   <authorUrl>http://www.electric-cloud.com/support</authorUrl>
   <category>Container Management</category>
   <commander-version min="6.0" />
-  <description>Integrates with Kubernetes orchestration engine to run docker containers. Kubernetes cluster can be hosted anywhere as long as the API is accessible.</description>
+  <description>Integrates with Kubernetes orchestration engine to deploy Docker containers.</description>
   <help>help.xml</help>
   <key>EC-Kubernetes</key>
   <configure>ec_config</configure>
