--- a/specs/environments/default/docker-compose.yml
+++ b/specs/environments/default/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   electric-flow:
-    image: "ecdocker/eflow-ce-server"
+    image: "electricflow/efserver"
     ports:
       - "8000:8000"
       - "8443:8443"
