--- a/help/changelog.yaml
+++ b/help/changelog.yaml
@@ -25,3 +25,4 @@
   - Added 'Wait For Kubernetes API' procedure.
 1.1.0:
   - Added "Discover" procedure.
+  - Added "Import Microservices" procedure.
