--- a/help/changelog.yaml
+++ b/help/changelog.yaml
@@ -31,3 +31,5 @@
 1.1.1:
   -  Added report generation on unsupported tags for <i>Import Microservices</i> procedure.
   -  Configured the plugin to allow the ElectricFlow UI to create configs inline of procedure form.
+  -  Added 'Test Connection' step for 'EditConfiguration' procedure.
+  -  Updated 'Deploy Service' procedure by Warning in case of deploying 'Headless' service.
