Moving dependencies to STOMP

--- a/help/changelog.yaml
+++ b/help/changelog.yaml
@@ -39,3 +39,6 @@
   -  Fixed 'Test Connection' issues within 'Create/EditConfiguration' - fixed handling of 'URI Path for Checking Cluster Connectivity'
   -  Extended 'Import Microservices' by possiblity to map imported microservices to Kubernetes cluster from EC-AzureContainerService
   -  "Fixed error 'Unsupported fields in Discovery: deploymentStrategy, maxRunningPercentage, minAvailabilityPercentage'"
+1.2.0:
+  -  |
+  Changed the way of storing and loading dependencies: the Repository is not required anymore. Now the depencencies and loaded through STOMP.
