--- a/specs/build.gradle
+++ b/specs/build.gradle
@@ -51,40 +51,31 @@ repositories {
 
 
 dependencies {
-    // Groovy
-    compile 'org.codehaus.groovy:groovy-all:2.4.5:indy'
-    compile group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.7.1'
-    // Tests
-    compile "org.testng:testng:$testNgVersion"
-    // Allure
-    compile "io.qameta.allure:allure-testng:$allureVersion"
-    // Logger
-    compile group: 'log4j', name: 'log4j', version: '1.2.17'
-    //compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+    implementation(
+            'org.codehaus.groovy:groovy-all:2.4.5:indy',
+            "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1",
+            "org.testng:testng:$testNgVersion",
+            "io.qameta.allure:allure-testng:$allureVersion",
+            "org.jfrog.artifactory.client:artifactory-java-client-services:2.6.2",
+            "io.rest-assured:rest-assured:$restAssuredVersion",
+            'org.spockframework:spock-core:1.1-groovy-2.4-SNAPSHOT',
+            'com.electriccloud:ec-specs-plugins-core:1.5.0',
+            'com.jayway.restassured:rest-assured:2.4.0',
+            "org.awaitility:awaitility:3.1.0",
+            "org.awaitility:awaitility-groovy:3.1.0",
+            "org.hamcrest:hamcrest-all:1.3",
+            'com.google.guava:guava:27.0-jre'
+    )
+    testImplementation( 'com.athaydes:spock-reports:1.6.0' ) {
+        transitive = false // this avoids affecting your version of Groovy/Spock
+    }
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
     // JSON
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     compile group: 'org.json', name: 'json', version: '20180130'
-    // Kubernetes
+    // Kubernetes API
     compile 'io.kubernetes:client-java:1.0.0'
-    // Helper Libraries
-    compile group: 'org.awaitility', name: 'awaitility-groovy', version: '3.1.0'
-    // Rest-Assured
-    compile "io.rest-assured:rest-assured:$restAssuredVersion"
-    compile group: 'io.rest-assured', name: 'spring-mock-mvc', version: "$restAssuredVersion"
-    compile "io.rest-assured:rest-assured:$restAssuredVersion"
-    compile "io.rest-assured:json-path:$restAssuredVersion"
-    compile "io.rest-assured:xml-path:$restAssuredVersion"
-    compile "io.rest-assured:json-schema-validator:$restAssuredVersion"
-
-    //Spock tests
-    compile 'org.spockframework:spock-core:1.1-groovy-2.4-SNAPSHOT'
-    compile 'com.electriccloud:ec-specs-plugins-core:1.5.0'
-    // compile 'com.electriccloud:ec-specs-plugins-core:1.5.0-SNAPSHOT'
-    compile 'com.jayway.restassured:rest-assured:2.4.0'
-    testCompile( 'com.athaydes:spock-reports:1.6.0' ) {
-        transitive = false // this avoids affecting your version of Groovy/Spock
-    }
 
 }
 
