--- a/help/changelog.yaml
+++ b/help/changelog.yaml
@@ -50,3 +50,4 @@
   - Fixed documentation for the binary dependencies management.
 1.3.0:
   - Provisioning of Binary Dependencies (for example Grape jars) in the agent resource, required by this plugin, is now delivered through a newly introduced mechanism called Plugin Dependency Management. Binary dependencies will now be seamlessly delivered to the agent resource from the Flow Server, any time a new version of a plugin is invoked the first time. Flow Repository set up is no longer required for this plugin.
+  - Fixed Smart Map rendering for the case with serviceless pods.
