--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -11,5 +11,7 @@
   <label>EC-Kubernetes</label>
   <version>1.3.3</version>
 <hasAdoc>true</hasAdoc>
-  <catalogLabel>Kubernetes</catalogLabel>
+
+<detailedDescription>Kubernetes is an open-source system for automating deployment, scaling, and management of containerized applications. The EC-Kubernetes plugin integrates with your Kubernetes cluster to run Docker containers. Kubernetes schedules your containers into the cluster and manages them automatically based on requirements you define, such as CPU and memory.</detailedDescription>
+<catalogLabel>Kubernetes</catalogLabel>
 </plugin>
