--- a/agent/grape/grapes/asm/asm/ivydata-3.3.1.properties
+++ b/agent/grape/grapes/asm/asm/ivydata-3.3.1.properties
@@ -1,16 +1,16 @@
 #ivy cached data file for asm#asm;3.3.1
-#Thu Jul 16 14:06:20 EEST 2020
-artifact\:ivy\#ivy\#xml\#1294206018.is-local=true
+#Fri Feb 12 18:57:56 EET 2021
+artifact\:ivy\#ivy\#xml\#1294206018.is-local=false
 artifact\:asm\#pom.original\#pom\#-1358452426.exists=true
-artifact\:asm\#pom.original\#pom\#-1358452426.location=file\:/Users/imago//.m2/repository/asm/asm/3.3.1/asm-3.3.1.pom
-resolver=localm2
+artifact\:asm\#pom.original\#pom\#-1358452426.location=https\://jcenter.bintray.com/asm/asm/3.3.1/asm-3.3.1.pom
+resolver=jcenter
 artifact\:ivy\#ivy\#xml\#1294206018.original=artifact\:asm\#pom.original\#pom\#-1358452426
-artifact\:asm\#pom.original\#pom\#-1358452426.is-local=true
-artifact\:asm\#jar\#jar\#1283952208.is-local=true
+artifact\:asm\#pom.original\#pom\#-1358452426.is-local=false
+artifact\:asm\#jar\#jar\#1283952208.is-local=false
 artifact\:ivy\#ivy\#xml\#1294206018.exists=true
 artifact\:asm\#pom.original\#pom\#-1358452426.original=artifact\:asm\#pom.original\#pom\#-1358452426
-artifact\:asm\#jar\#jar\#1283952208.location=file\:/Users/imago//.m2/repository/asm/asm/3.3.1/asm-3.3.1.jar
-artifact.resolver=localm2
+artifact\:asm\#jar\#jar\#1283952208.location=https\://jcenter.bintray.com/asm/asm/3.3.1/asm-3.3.1.jar
+artifact.resolver=jcenter
 artifact\:asm\#jar\#jar\#1283952208.original=artifact\:asm\#jar\#jar\#1283952208
 artifact\:asm\#jar\#jar\#1283952208.exists=true
-artifact\:ivy\#ivy\#xml\#1294206018.location=file\:/Users/imago//.m2/repository/asm/asm/3.3.1/asm-3.3.1.pom
+artifact\:ivy\#ivy\#xml\#1294206018.location=https\://jcenter.bintray.com/asm/asm/3.3.1/asm-3.3.1.pom
