--- a/agent/grape/grapes/net.minidev/asm/ivydata-1.0.2.properties
+++ b/agent/grape/grapes/net.minidev/asm/ivydata-1.0.2.properties
@@ -1,5 +1,5 @@
 #ivy cached data file for net.minidev#asm;1.0.2
-#Thu Jul 16 14:06:20 EEST 2020
+#Fri Feb 12 18:57:56 EET 2021
 artifact\:ivy\#ivy\#xml\#929563986.original=artifact\:asm\#pom.original\#pom\#-1723094458
 artifact\:asm\#bundle\#jar\#-54207441.location=https\://jcenter.bintray.com/net/minidev/asm/1.0.2/asm-1.0.2.jar
 resolver=jcenter
