--- a/agent/grape/grapes/net.minidev/parent/ivydata-2.1.0.properties
+++ b/agent/grape/grapes/net.minidev/parent/ivydata-2.1.0.properties
@@ -1,5 +1,5 @@
 #ivy cached data file for net.minidev#parent;2.1.0
-#Thu Jul 16 13:56:49 EEST 2020
+#Fri Feb 12 18:57:51 EET 2021
 resolver=jcenter
 artifact\:parent\#pom.original\#pom\#-773710461.is-local=false
 artifact\:ivy\#ivy\#xml\#-1052434632.exists=true
