--- a/agent/grape/grapes/asm/asm-parent/ivydata-3.3.1.properties
+++ b/agent/grape/grapes/asm/asm-parent/ivydata-3.3.1.properties
@@ -1,12 +1,12 @@
 #ivy cached data file for asm#asm-parent;3.3.1
-#Thu Jul 16 13:56:51 EEST 2020
-artifact\:asm-parent\#pom.original\#pom\#-1282680055.is-local=true
+#Fri Feb 12 18:57:53 EET 2021
+artifact\:asm-parent\#pom.original\#pom\#-1282680055.is-local=false
 artifact\:asm-parent\#pom.original\#pom\#-1282680055.exists=true
 artifact\:asm-parent\#pom.original\#pom\#-1282680055.original=artifact\:asm-parent\#pom.original\#pom\#-1282680055
-resolver=localm2
-artifact\:ivy\#ivy\#xml\#893446396.is-local=true
-artifact\:ivy\#ivy\#xml\#893446396.location=file\:/Users/imago//.m2/repository/asm/asm-parent/3.3.1/asm-parent-3.3.1.pom
-artifact.resolver=localm2
+resolver=jcenter
+artifact\:ivy\#ivy\#xml\#893446396.is-local=false
+artifact\:ivy\#ivy\#xml\#893446396.location=https\://jcenter.bintray.com/asm/asm-parent/3.3.1/asm-parent-3.3.1.pom
+artifact.resolver=jcenter
 artifact\:ivy\#ivy\#xml\#893446396.exists=true
 artifact\:ivy\#ivy\#xml\#893446396.original=artifact\:asm-parent\#pom.original\#pom\#-1282680055
-artifact\:asm-parent\#pom.original\#pom\#-1282680055.location=file\:/Users/imago//.m2/repository/asm/asm-parent/3.3.1/asm-parent-3.3.1.pom
+artifact\:asm-parent\#pom.original\#pom\#-1282680055.location=https\://jcenter.bintray.com/asm/asm-parent/3.3.1/asm-parent-3.3.1.pom
