--- a/agent/grape/grapes/com.jayway.jsonpath/json-path/ivydata-2.0.0.properties
+++ b/agent/grape/grapes/com.jayway.jsonpath/json-path/ivydata-2.0.0.properties
@@ -1,5 +1,5 @@
 #ivy cached data file for com.jayway.jsonpath#json-path;2.0.0
-#Thu Jul 16 14:06:20 EEST 2020
+#Fri Feb 12 18:57:56 EET 2021
 artifact\:json-path\#jar\#jar\#-87134824.is-local=false
 artifact\:json-path\#pom.original\#pom\#1565427838.location=https\://jcenter.bintray.com/com/jayway/jsonpath/json-path/2.0.0/json-path-2.0.0.pom
 artifact\:json-path\#jar\#jar\#-87134824.location=https\://jcenter.bintray.com/com/jayway/jsonpath/json-path/2.0.0/json-path-2.0.0.jar
@@ -9,8 +9,8 @@ artifact\:json-path\#jar\#jar\#-87134824.original=artifact\:json-path\#jar\#jar\
 artifact\:json-path\#pom.original\#pom\#1565427838.is-local=false
 artifact\:json-path\#pom.original\#pom\#1565427838.original=artifact\:json-path\#pom.original\#pom\#1565427838
 artifact\:ivy\#ivy\#xml\#-494372109.exists=true
-artifact.resolver=jcenter
 artifact\:ivy\#ivy\#xml\#-494372109.location=https\://jcenter.bintray.com/com/jayway/jsonpath/json-path/2.0.0/json-path-2.0.0.pom
+artifact.resolver=jcenter
 artifact\:json-path\#pom.original\#pom\#1565427838.exists=true
 artifact\:json-path\#jar\#jar\#-87134824.exists=true
 artifact\:ivy\#ivy\#xml\#-494372109.is-local=false
