--- a/agent/grape/grapes/org.yaml/snakeyaml/ivydata-1.19.properties
+++ b/agent/grape/grapes/org.yaml/snakeyaml/ivydata-1.19.properties
@@ -1,16 +1,12 @@
 #ivy cached data file for org.yaml#snakeyaml;1.19
-#Thu Jul 16 14:06:20 EEST 2020
+#Fri Feb 12 18:57:56 EET 2021
 artifact\:ivy\#ivy\#xml\#1749578120.exists=true
-artifact\:snakeyaml\#jar\#jar\#-1489519070.location=https\://jcenter.bintray.com/org/yaml/snakeyaml/1.19/snakeyaml-1.19.jar
 resolver=jcenter
-artifact\:snakeyaml\#jar\#jar\#-1489519070.is-local=false
-artifact\:snakeyaml\#jar\#jar\#-1489519070.original=artifact\:snakeyaml\#jar\#jar\#-1489519070
 artifact\:snakeyaml\#pom.original\#pom\#163043592.is-local=false
 artifact.resolver=jcenter
 artifact\:snakeyaml\#pom.original\#pom\#163043592.location=https\://jcenter.bintray.com/org/yaml/snakeyaml/1.19/snakeyaml-1.19.pom
 artifact\:ivy\#ivy\#xml\#1749578120.is-local=false
 artifact\:ivy\#ivy\#xml\#1749578120.location=https\://jcenter.bintray.com/org/yaml/snakeyaml/1.19/snakeyaml-1.19.pom
 artifact\:snakeyaml\#pom.original\#pom\#163043592.original=artifact\:snakeyaml\#pom.original\#pom\#163043592
-artifact\:snakeyaml\#jar\#jar\#-1489519070.exists=true
 artifact\:snakeyaml\#pom.original\#pom\#163043592.exists=true
 artifact\:ivy\#ivy\#xml\#1749578120.original=artifact\:snakeyaml\#pom.original\#pom\#163043592
