--- a/help/changelog.yaml
+++ b/help/changelog.yaml
@@ -55,3 +55,5 @@
   - Renaming from "CloudBees Flow" to "CloudBees CD".
 1.3.2:
   - Upgrading certain third-party libraries to address security issues.
+1.3.4:
+  - Upgrading certain third-party libraries to address security issues.
