--- a/help/changelog.yaml
+++ b/help/changelog.yaml
@@ -57,3 +57,5 @@
   - Upgrading certain third-party libraries to address security issues.
 1.3.4:
   - Upgrading certain third-party libraries to address security issues.
+1.3.5:
+  - This plugin was deprecated.
